# prologixEmulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Parser.cpp  Parser.hpp  README.md  Readme.md  Responder.cpp  Responder.hpp  cmake_install.cmake  compile_commands.json  junk.cpp  record.cast  scratchpad.cpp
prologix_emulator/: CMakelists.txt  Command.cpp  Command.hpp  Commander.cpp  Commander.hpp  Functions.cpp  Functions.hpp  Parser.cpp  Parser.hpp  Responder.cpp  TCPServer.cpp  TCPServer.hpp  TCPSession.cpp  TCPSession.hpp  UDPServer.cpp  UDPServer.hpp  command.cpp  command.hpp  functions.cpp  functions.hpp  main.cpp
prologix_emulator.xcodeproj/: project.pbxproj
prologix_emulator.xcodeproj/project.xcworkspace/xcuserdata/morbo.xcuserdatad/: UserInterfaceState.xcuserstate
prologix_emulator.xcodeproj/xcuserdata/morbo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
prologix_emulator.xcodeproj/xcuserdata/morbo.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: ClientList.cpp  ClientList.h  Commander.cpp  Commander.h  Functions.cpp  Functions.h  Parser.cpp  Parser.h  Responder.cpp  Responder.h  TCPServer.cpp  TCPServer.h  TCPSession.cpp  TCPSession.h  UDPServer.cpp  UDPServer.h  main.cpp
